@@ -1698,7 +1698,7 @@ assert(newOrderCount == ts->orderCount);
     ts->orderAlloced = ts->orderCount;
     orderList = _free(orderList);
 
-#ifdef	HACK
+#if defined(__LCLINT__)		/* XXX HACK rpmsort needs for graphviz */
     /* Clean up after dependency checks */
     pi = teInitIterator(ts);
     while ((p = teNextIterator(pi)) != NULL) {
